# gbwtgraph

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  SERIALIZATION.md  algorithms.cpp  cached_gbwtgraph.cpp  gbwtgraph.cpp  gfa.cpp  gfa2gbwt.cpp  install.sh  internal.cpp  minimizer.cpp  path_cover.cpp  utils.cpp
include/gbwtgraph/: algorithms.h  cached_gbwtgraph.h  gbwtgraph.h  gbz.h  gfa.h  index.h  internal.h  io.h  minimizer.h  naive_graph.h  path_cover.h  subgraph.h  utils.h
include/gbwtgraph/internal/: path_names_index.hpp
src/: algorithms.cpp  cached_gbwtgraph.cpp  canonical_gfa.cpp  chunk_gbz.cpp  gbwtgraph.cpp  gbz.cpp  gbz_extract.cpp  gbz_stats.cpp  gfa.cpp  gfa2gbwt.cpp  index.cpp  internal.cpp  kmer_freq.cpp  minimizer.cpp  naive_graph.cpp  path_cover.cpp  subgraph.cpp  subgraph_query.cpp  utils.cpp
tests/: Makefile  example.gfa  shared.h  test_algorithms.cpp  test_cached_gbwtgraph.cpp  test_gbwtgraph.cpp  test_gbz.cpp  test_gfa.cpp  test_index.cpp  test_minimizer.cpp  test_naive_graph.cpp  test_path_cover.cpp  test_subgraph.cpp  test_utils.cpp
tests/gfas/: components.gfa  components_first.gfa  components_ref.gfa  components_walks.gfa  components_walks_compressed.gfa  components_walks_no_interval.gfa  cyclic.gfa  default.gfa  example.gfa  example_0-based.gfa  example_chopped.gfa  example_chopping.gfa  example_from_chopping.gfa  example_more_reference.gfa  example_reference.gfa  example_str-names.gfa  example_walks-only.gfa  example_walks.gfa  for_subgraph.gfa  fragmented.gfa  generic-only.gfa  pan-sn.gfa  ref-only.gfa  reversal.gfa  reversal_chopping.gfa  reversal_walks.gfa  set-pggname.py
